Fix body scrolling on mobile devices

--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -32,17 +32,12 @@ html {
   background-color: var(--black);
   padding: 0;
   border: 0;
-  overflow: hidden;
 }
 
-.App {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  max-width: 100vw;
-  max-height: 100vh;
+body,
+.root {
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
 }
 
@@ -61,22 +56,24 @@ html {
 }
 
 .MoveOverlay {
-  position: fixed;
+  position: absolute;
   z-index: 100;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 .SpellOverlay {
-  position: fixed;
+  position: absolute;
   z-index: 101;
-  top: 75vh;
-  height: 25vh;
-  width: 25vw;
+  top: 85%;
+  height: 15%;
+  width: 30%;
 }
 
 .Terminal {
   font-family: "Perfect DOS VGA 437 Win";
+  padding: 0;
+  margin: 0;
 }
 
 .HUD {
